# RA8E1_prj

./: .gitignore  .secure_azone  .secure_rzone  .secure_xml  CMakeCache.txt  CMakeLists.txt  Config.cmake  FFT_readme.md  HLAC_LDA_README.md  LICENSE  Makefile  RA8E1_prj.sln  README.md  READMEjp.md  SOBEL_HLAC_LDA_README.md  bsp_linker_info.h  buildinfo.json  cmake_install.cmake  compile_commands.json  configuration.xml  fsp_gen.lld  get_sdk.sh  hlac_features.mat  memory_regions.lld  memory_regions_mcuboot_primary.lld  ra8prog.py  ra_cfg.txt  replace_zenkaku.ps1  update_c_hlac_model.ps1  update_c_hlac_model.sh
.cache/clangd/index/: FreeRTOS.h.424869988441691B.idx  FreeRTOSConfig.h.7E57B15458B0E2B2.idx  R7FA8E1AF.h.F667D7702B129C66.idx  __stddef_null.h.A27F7C82EDF9D2B1.idx  __stddef_offsetof.h.CDD7AF3D20B12F73.idx  __stddef_ptrdiff_t.h.3102F3BB459F0FCA.idx  __stddef_size_t.h.D33182E4BE895BAA.idx  __stddef_wchar_t.h.923AE745B6C4A304.idx  __stddef_wint_t.h.AF73E5DB65B16771.idx  _ansi.h.A4B66892CEE39193.idx  _default_types.h.D54D45D629EA0BF1.idx  _intsup.h.0D9402E6D42FF4BA.idx  _newlib_version.h.0D238D4312D58D48.idx  _pthreadtypes.h.21511BDBFFCD6CE9.idx  _stdint.h.24A7CC7F41C46C56.idx  _types.h.B450A2B7F8591F2C.idx  _types.h.FAD71FFBB5FF14D7.idx  arm_acle.h.CE7A548E4A3C576F.idx  armv7m_cachel1.h.9DF2EB8E6C5AFFC8.idx  armv81m_pac.h.5AFF878D5BD7A7B7.idx  armv8m_mpu.h.CCA62C7A88FF110C.idx  armv8m_pmu.h.0579AF790915B4C3.idx  assert.h.84E21D870B9746AE.idx  blinky_thread.c.4340320B056860B7.idx  blinky_thread.h.162FF8D91F8296F9.idx  blinky_thread_entry.c.EA22B45385AC7258.idx  board.h.697504AA155F71A9.idx  board_cfg.h.F904CF438CFBDE71.idx  board_ethernet_phy.h.35B771ABB691B3CB.idx  board_init.c.97135422069C50F4.idx  board_init.h.81769B30D0DECB88.idx  board_leds.c.40B40A87152A024C.idx  board_leds.h.ED833E29D1E6C91D.idx  bsp_api.h.9EC11C97B5796BF4.idx  bsp_cfg.h.653DF5E1183900B6.idx  bsp_clock_cfg.h.36BC3FC8A53E55B4.idx  bsp_clocks.c.A7630AB0F4FA5378.idx  bsp_clocks.h.12D46279A07F519E.idx  bsp_common.c.A1637532F8C08BAF.idx  bsp_common.h.BBF0CB5BDD2CD953.idx  (+99 more)
cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake  gcc.cmake  llvm.cmake  prebuild.cmake
csharp/: README.md
csharp/UdpPhotoReceiver/: DepthRenderer.cs  Form1.Designer.cs  Form1.cs  FrameAssembler.cs  JetColormap.cs  Program.cs  RenderMode.cs  UdpFrameReceiver.cs  UdpPhotoReceiver.csproj
docs/: depth_params.md  hlac_sobel_lda_workflow.md
lda_model/: lda_bias_b.csv  lda_model.mat  lda_params.h  lda_params_info.txt  lda_weights_W.csv
matlab/: QUICKSTART.md  compare_sobel_hlac_on_dataset.m  extract_hlac_features.m  extract_hlac_from_dataset.m  hlac_features.mat  hlac_image_capture.m  hlac_lda_workflow.m  hlac_udp_inference.m  lda_predict_from_Wb.m  load_lda_params.m  plot_sobel_effect_on_features.m  send_test_frame_256x256.m  sobel_hlac_lda_example.m  test_lda_inference.m  test_udp_connection.m  test_udp_simple.m  train_lda_classifier.m  udp_photo_receiver.m  viewQVGA_YUV.m  viewQVGAfromTeraTermLog_YUV.m  visualize_hlac_features.m  visualize_sobel_hlac.m  visualize_sobel_hlac_process.m
mcuboot_boot/mcuboot_boot/: .secure_xml  CMakeLists.txt  Config.cmake  README.md  mcuboot_boot.code-workspace  solution.xml
mcuboot_boot/mcuboot_boot/cmake/: llvm.cmake  prebuild.cmake
mcuboot_boot/mcuboot_boot_flat/: .bootloader_xml  .secure_azone  .secure_xml  CMakeLists.txt  README.md  bsp_linker_info.h  configuration.xml  mcuboot_boot_flat.code-workspace  memory_regions.lld  ra_cfg.txt
mcuboot_boot/mcuboot_boot_flat/.theia/: launch.json
mcuboot_boot/mcuboot_boot_flat/cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake  llvm.cmake
mcuboot_boot/mcuboot_boot_flat/ra_gen/: bsp_clock_cfg.h  common_data.h  hal_data.c  hal_data.h  pin_data.c
ra/board/ra8e1_fpb/: board.h  board_ethernet_phy.h  board_init.c  (+3 more)
ra_cfg/aws/: FreeRTOSConfig.h
ra_cfg/fsp_cfg/: r_ceu_cfg.h  r_dmac_cfg.h  r_ether_cfg.h  r_ether_phy_cfg.h  r_gpt_cfg.h  r_ospi_b_cfg.h  r_sci_b_uart_cfg.h  r_usb_basic_cfg.h  r_usb_pcdc_cfg.h  rm_comms_usb_pcdc_cfg.h
ra_cfg/lwip/: lwipopts.h
ra_gen/: blinky_thread.c  blinky_thread.h  bsp_clock_cfg.h  common_data.c  common_data.h  hal_data.c  hal_data.h  main.c  main_thread0.c  main_thread0.h  main_thread1.c  main_thread1.h  main_thread2.c  main_thread2.h  main_thread3.c  main_thread3.h  pin_data.c  vector_data.c  vector_data.h
script/: build_bench.sh  fsp_mcuboot_primary.lld
src/: blinky_thread_entry.c  cam.c  cam.h  fft_depth_test.c  fft_depth_test.h  hal_entry.c  hlac_lda_infer.c  hlac_lda_infer.h  hlac_lda_model.bak  hlac_lda_model.c  hlac_lda_model.h  hyperram_integ.c  hyperram_integ.h  lda_params.h  main_thread0_entry.c  main_thread1_entry.c  main_thread2_entry.c  main_thread3_entry.c  motor_control.c  motor_control.h  putchar_ra8usb.c  putchar_ra8usb.h  r_ether_phy_target_lan8720a.c  r_ether_phy_target_lan8720a.h  r_usb_pcdc_descriptor.c  sccb_if.c  sccb_if.h  usb_cdc.h  verify_mode.h  video_frame_buffer.h
(+101 files in other folders)
